force-app/main/default/objects/Aqua_Master_Inventory__c/Aqua_Master_Inventory__c.object-meta.xml
<CustomObject>
    <label>Aqua Master Inventory</label>
    <nameField>
        <displayFormat>AMI-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Master Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>