force-app/main/default/objects/Aqua_Master_Inventory__c/fields/Goal_Min_Per_Lot__c.field-meta.xml
<CustomField>
    <fullName>Goal_Min_Per_Lot__c</fullName>
    <description>Standard installation goal time in minutes for this item per lot.</description>
    <label>Goal Min Per Lot</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>