force-app/main/default/objects/Aqua_Master_Inventory__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Controller</fullName>
                <default>true</default>
                <label>Controller</label>
            </value>
            <value>
                <fullName>Heads</fullName>
            </value>
            <value>
                <fullName>Flags</fullName>
            </value>
            <value>
                <fullName>Measuring Cups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>