force-app/main/default/objects/Aqua_Master_Inventory__c/fields/Reorder_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Threshold__c</fullName>
    <description>When shop quantity drops at or below this number, an inventory alert fires on the console home tab.</description>
    <label>Reorder Threshold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>