force-app/main/default/objects/Aqua_Master_Inventory__c/fields/Standard_Qty_Per_Lot__c.field-meta.xml
<CustomField>
    <fullName>Standard_Qty_Per_Lot__c</fullName>
    <description>Standard quantity of this item installed per lot.</description>
    <label>Standard Qty Per Lot</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>