force-app/main/default/objects/Aqua_Master_Inventory__c/fields/Total_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchased__c</fullName>
    <label>Total Purchased</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>