force-app/main/default/objects/Aqua_Master_Inventory__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <description>Cost per unit — used to calculate estimated billing amount on variance pickup tickets.</description>
    <label>Unit Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>