force-app/main/default/objects/Aqua_Master_Inventory__c/fields/Validation_Note__c.field-meta.xml
<CustomField>
    <fullName>Validation_Note__c</fullName>
    <description>Description of what is validated when the install ticket is closed for this item.</description>
    <label>Validation at Close</label>
    <length>255</length>
    <type>Text</type>
</CustomField>